# QuotaGlance

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  design-qa.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: QuotaGlance-项目分析.md  README.md  api.md  changelog.md  database.md  deploy.md  design.md  detail-design.md  environment.md  issues-analysis.md  privacy.md  project-plan.md  requirements.md  security.md  test.md  troubleshooting.md  ui-design.md  user-manual.md
scripts/: check-release-version.mjs  smoke-orb-drag.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: mod.rs  preferences_store.rs  refresh_policy.rs  runtime.rs  state.rs  types.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: error.rs  mod.rs  models.rs
src-tauri/src/infrastructure/: app_server_process.rs  app_server_session.rs  mod.rs
src-tauri/src/platform/: mod.rs  tray.rs  window.rs
src-tauri/src/providers/: app_server_protocol.rs  codex_app_server.rs  mod.rs
src-tauri/tests/: app_server_process_contract.rs  app_server_session_contract.rs
src-tauri/tests/fixtures/: fake_app_server.rs
src/api/: contract.ts  fixtures.ts  index.ts  mock-client.ts  (+1 more)
(+18 files in other folders)
